# sn2md

./: .gitignore  CHANGELOG.md  README.md  import_supernote.py  process_supernotes.sh  pyproject.toml
.github/workflows/: python-app.yml
docs/: example.md
docs/20240712_151149/: .sn2md.metadata.yaml  20240712_151149.md  metadata.yaml
sn2md/: ai_utils.py  cli.py  import_supernote.py  importer.py  langchain_utils.py  supernote_utils.py  types.py
tests/: test_supernote_utils.py
tests/sn2md/: test_ai_utils.py  test_importer.py  test_langchain_utils.py  test_supernote_utils.py
