[tool.poetry]
name = "sn2md"
version = "0.1.0"
description = "Converts Supernote exports to markdown"
authors = ["Dane Summers <dsummersl@yahoo.com>"]
readme = "README.md"

[project.urls]
homepage = "https://github.com/dsummersl/sn2md"
issues = "https://github.com/dsummersl/sn2md/issues"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.39.0"
click = "^8.1.7"
supernotelib = "^0.5.0"
pyyaml = "^6.0.1"
platformdirs = "^4.2.2"


jinja2 = "^3.1.4"
[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.0"
autoimport = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sn2md = "sn2md.import_supernote:cli"
