[tool.basedpyright]
extraPaths = ["summarizer"]
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportMissingParameterType = false

[tool.poetry]
name = "sn2md"
version = "0.1.0"
description = "Converts Supernote exports to markdown"
authors = ["Dane Summers <dsummersl@yahoo.com>"]
readme = "README.md"

[project.urls]
homepage = "https://github.com/dsummersl/sn2md"
issues = "https://github.com/dsummersl/sn2md/issues"

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.1.6"
langchain = "^0.1.20"
langgraph = "^0.0.48"
click = "^8.1.7"
supernotelib = "^0.5.0"
pyyaml = "^6.0.1"


jinja2 = "^3.1.4"
[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.0"
autoimport = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = [
    "sn2md/*.py"
]

[tool.poetry.scripts]
sn2md = "sn2md.cli:cli"
